Fix page gradient flicker bug

--- a/src/components/page/page/Page.css
+++ b/src/components/page/page/Page.css
@@ -10,33 +10,6 @@
 	box-sizing: border-box;
 }
 
-.page.isOdd::before,
-.page.isEven::before {
-	position: absolute;
-	top: 0;
-	content: '';
-	width: 2vw;
-	height: 100%;
-}
-
-.page.isOdd::before {
-	left: 0;
-	background: linear-gradient(
-		90deg,
-		rgba(0, 0, 0, 0.5) 0%,
-		rgba(255, 255, 255, 0) 100%
-	);
-}
-
-.page.isEven::before {
-	right: 0;
-	background: linear-gradient(
-		-90deg,
-		rgba(0, 0, 0, 0.5) 0%,
-		rgba(255, 255, 255, 0) 100%
-	);
-}
-
 .page.isOdd {
 	right: 0;
 	transform: rotateY(0deg);
@@ -74,6 +47,33 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
+}
+
+.stickerLayer.isOdd::before,
+.stickerLayer.isEven::before {
+	position: absolute;
+	top: 0;
+	content: '';
+	width: 2vw;
+	height: 100%;
+}
+
+.stickerLayer.isOdd::before {
+	left: 0;
+	background: linear-gradient(
+		90deg,
+		rgba(0, 0, 0, 0.5) 0%,
+		rgba(255, 255, 255, 0) 100%
+	);
+}
+
+.stickerLayer.isEven::before {
+	right: 0;
+	background: linear-gradient(
+		-90deg,
+		rgba(0, 0, 0, 0.5) 0%,
+		rgba(255, 255, 255, 0) 100%
+	);
 }
 
 .page .sticker .stickerNumber {
